Fix Security Vulnerability on xstream component
Control transives depedency version by upgrading.

Signed-off-by: Tao Jiang <taoj@vmware.com>

--- a/redis-persistence/build.gradle
+++ b/redis-persistence/build.gradle
@@ -18,6 +18,11 @@ dependencies {
 
     implementation "redis.clients:jedis:${revJedis}"
     implementation "com.netflix.dyno-queues:dyno-queues-redis:${revDynoQueues}"
+    constraints {
+        implementation('com.thoughtworks.xstream:xstream:1.4.18') {
+            because 'The version pulled from dyno-queues has security vulnerability'
+        }
+    }
 
     //In memory
     implementation "org.rarefiedredis.redis:redis-java:${revRarefiedRedis}"
